--- a/app/src/main/res/layout/activity_fregister.xml
+++ b/app/src/main/res/layout/activity_fregister.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.437">
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/txtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30sp"
@@ -28,10 +28,11 @@
             android:ems="10"
             android:hint="Nombre"
             android:inputType="textPersonName"
+            android:textColor="#73F08E"
             android:textColorHint="#73F08E" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30sp"
@@ -39,26 +40,29 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
+            android:textColor="#73F08E"
             android:textColorHint="#73F08E" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/txtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30sp"
             android:backgroundTint="#73F08E"
             android:ems="10"
             android:hint="Contraseña"
+            android:textColor="#73F08E"
             android:textColorHint="#73F08E" />
 
         <EditText
-            android:id="@+id/editTextPhone"
+            android:id="@+id/txtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#73F08E"
             android:ems="10"
             android:hint="Teléfono"
             android:inputType="phone"
+            android:textColor="#73F08E"
             android:textColorHint="#73F08E" />
 
     </LinearLayout>
@@ -90,7 +94,7 @@
         app:srcCompat="@drawable/mypet" />
 
     <Button
-        android:id="@+id/btncontinuar"
+        android:id="@+id/btnRegister"
         android:layout_width="239dp"
         android:layout_height="54dp"
         android:backgroundTint="#73F08E"
@@ -116,7 +120,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btncontinuar"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
         app:layout_constraintVertical_bias="0.303" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
